<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.bigtangle</groupId>
	<artifactId>bigtangle</artifactId>
	<name>bigtangle</name>
	<description>The parent project for bigtangle </description>
	<url>http://www.bigtangle.org</url>
	<inceptionYear>2010</inceptionYear>
	<packaging>pom</packaging>
	<version>0.5.0</version>
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.slf4j-version>2.0.6</org.slf4j-version>
		<mysql-version>8.0.18</mysql-version>
		<jackson.version>2.6.7</jackson.version>
		<org.springframework.boot.version>3.1.0</org.springframework.boot.version>
		<kafka.version>1.1.0</kafka.version>
		<junit.jupiter.version>5.9.3</junit.jupiter.version>
		<junit.platform.version>1.9.1</junit.platform.version>
	</properties>
	<modules>
		<module>bigtangle-core</module>
		<module>bigtangle-docker</module>
		<module>bigtangle-server</module>
		<module>bigtangle-subtangle</module>
		<module>bigtangle-seeds</module>
		<module>bigtangle-web</module>
	</modules>
	<dependencies>
		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j-version}</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<version>${junit.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
			</testResource>
			<testResource>
				<directory>src/main/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.2</version>
			</plugin>
			<plugin>
				<groupId>
					org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>
					3.5.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>
					org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.3</version>
				<configuration>
					<excludes>
						<exclude>
							**/performance/**.java
						</exclude>
					</excludes>
					<properties>
						<property>
							<name>junit</name>
							<value>true</value>
						</property>
					</properties>
					<argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
					<argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
					<argLine>--add-exports java.base/java.lang=ALL-UNNAMED </argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>
					2.22.2</version>
			</plugin>
		</plugins>
	</build>
</project>